WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
98191
isMainThread() should only be called by NoEventDispatchAssertion in debug builds
https://bugs.webkit.org/show_bug.cgi?id=98191
Summary
isMainThread() should only be called by NoEventDispatchAssertion in debug builds
Ryosuke Niwa
Reported
2012-10-02 12:52:39 PDT
There appears be a perf. regression. See
https://bugs.webkit.org/show_bug.cgi?id=96717
.
Attachments
Patch
(1.57 KB, patch)
2012-10-02 13:48 PDT
,
Ojan Vafai
inferno
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Ojan Vafai
Comment 1
2012-10-02 13:48:36 PDT
Created
attachment 166745
[details]
Patch
Ojan Vafai
Comment 2
2012-10-02 13:48:53 PDT
Committed
r130206
: <
http://trac.webkit.org/changeset/130206
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug