isMainThread() should only be called by NoEventDispatchAssertion in debug builds https://bugs.webkit.org/show_bug.cgi?id=98191

This fixes a performance regression and matches the original code from
before the refactor in http://trac.webkit.org/changeset/130077.

* dom/ContainerNode.h:
(WebCore::NoEventDispatchAssertion::NoEventDispatchAssertion):
(WebCore::NoEventDispatchAssertion::~NoEventDispatchAssertion):

Canonical link: https://commits.webkit.org/116205@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@130206 268f45cc-cd09-0410-ab3c-d52691b4dbfc